--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
     <header class="header">
        <div class="container">
            <div class="row">
-               <div class="col-md-3"></div>
-               <div class="col-md-6"></div>
+               <div class="col-md-3">
+                   <div class="logo">
+                       <a href="">
+                           <img src="images/logo.png" alt="logo.png">
+                       </a>
+                   </div>
+               </div>
+               <div class="col-md-6">
+                   <nav>
+                       <ul class="menu">
+                           <li><a href="">Home</a></li>
+                           <li><a href="">Products</a></li>
+                           <li><a href="">Payment</a></li>
+                           <li><a href="">Shipping</a></li>
+                       </ul>
+                   </nav>
+               </div>
                <div class="col-md-3"></div>
         </div>
        </div>
