--- a/index.html
+++ b/index.html
@@ -15,28 +15,42 @@
 
 <body>
     <header class="header">
-       <div class="container">
-           <div class="row">
-               <div class="col-md-3">
-                   <div class="logo">
-                       <a href="">
-                           <img src="images/logo.png" alt="logo.png">
-                       </a>
-                   </div>
-               </div>
-               <div class="col-md-6">
-                   <nav>
-                       <ul class="menu">
-                           <li><a href="">Home</a></li>
-                           <li><a href="">Products</a></li>
-                           <li><a href="">Payment</a></li>
-                           <li><a href="">Shipping</a></li>
-                       </ul>
-                   </nav>
-               </div>
-               <div class="col-md-3"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="logo">
+                        <a href="">
+                            <img src="images/logo.png" alt="logo.png">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <nav>
+                        <ul class="menu">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Payment</a></li>
+                            <li><a href="">Shipping</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-md-3">
+                    <div class="search">
+                        <input type="search" placeholder="search">
+                        <div class="search-icon">
+                            <a href="">
+                                <img src="images/search.png" alt="search.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="shop-icon">
+                        <a href="">
+                            <img src="images/basket.png" alt="bascket.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-       </div>
     </header>
     <main class="main">Main</main>
     <footer class="footer">Footer</footer>
