finished search button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shop-Project</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,14 +35,12 @@
                     </nav>
                 </div>
                 <div class="col-md-3">
-                    <div class="search">
+                    <form class="search">
                         <input type="search" placeholder="search">
-                        <div class="search-icon">
-                            <a href="">
-                                <img src="images/search.png" alt="search.png">
-                            </a>
-                        </div>
-                    </div>
+                        <button type="submit" class="button">
+                            <img src="images/search.png" alt="search.png">
+                        </button>
+                    </form>
                     <div class="shop-icon">
                         <a href="">
                             <img src="images/basket.png" alt="bascket.png">
