modified search button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-md-3">
                     <form class="search">
-                        <input type="search" placeholder="search">
+                        <input type="search" placeholder="search" class="input-search">
                         <button type="submit" class="button">
                             <img src="images/search.png" alt="search.png">
                         </button>
