--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <ul class="menu">
                             <li><a href="">Home</a></li>
                             <li><a href="">Products</a></li>
-                            <li><a href="">Payment</a></li>
+                            <li><a href="">Payment 3</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
