modified search button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <form class="search">
                         <input type="search" placeholder="search" class="input-search">
                         <button type="submit" class="button">
-                            <img src="images/search.png" alt="search.png">
+                            <!-- <img src="images/search.png" alt="search.png"> -->
                         </button>
                     </form>
                     <div class="shop-icon">
