--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <div class="col-md-6">
                     <nav>
                         <ul class="menu">
-                            <li><a href="">Home 1</a></li>
-                            <li><a href="">Products 2</a></li>
-                            <li><a href="">Payment 3</a></li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
