--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
                 </div>
                 <div class="col-md-3">
                     <form class="search">
-                        <input type="search" placeholder="search" class="input-search">
+                        <input type="text" placeholder="search" class="input-search">
                         <button type="submit" class="button">
                             <!-- <img src="images/search.png" alt="search.png"> -->
                         </button>
                     </form>
-                    <div class="shop-icon">
-                        <a href="">
+                    <div class="cart">
+                        <a href="" class="shop-icon">
                             <img src="images/basket.png" alt="bascket.png">
                         </a>
+                        <div class="number">4</div>
                     </div>
                 </div>
             </div>
