--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
+                            <li class="drop-menu"><a href="" >Products</a>
+                                <ul class="drop-content">
+                                    <li><a href="">Lorem ipsum dolor</a></li>
+                                    <li><a href="">Sit amet</a></li>
+                                    <li><a href="">Consectetur adipisicing</a></li>
+                                    <li><a href="">Tempor incididunt</a></li>
+                                    <li><a href="">Dolore magna aliqua</a></li>
+                                    <li><a href="">Ut enim ad minim veniam</a></li>
+                                    <li><a href="">Quis nostrud</a></li>
+                                </ul>
+                            </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
