--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/cfe2e26fba.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li class="drop-menu"><a href="" >Products</a>
+                            <li class="drop-menu"><a href="" >Products <i class="fa fa-angle-down" aria-hidden="true"></i></span></a>
                                 <ul class="drop-content">
                                     <li><a href="">Lorem ipsum dolor</a></li>
                                     <li><a href="">Sit amet</a></li>
@@ -48,7 +49,6 @@
                     <form class="search">
                         <input type="text" placeholder="search" class="input-search">
                         <button type="submit" class="button">
-                            <!-- <img src="images/search.png" alt="search.png"> -->
                         </button>
                     </form>
                     <div class="cart">
