added product card

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li class="drop-menu"><a href="" >Products <i class="fa fa-angle-down" aria-hidden="true"></i></span></a>
+                            <li class="drop-menu"><a href="">Products <i class="fa fa-angle-down"
+                                        aria-hidden="true"></i></a>
                                 <ul class="drop-content">
                                     <li><a href="">Lorem ipsum dolor</a></li>
                                     <li><a href="">Sit amet</a></li>
@@ -46,22 +47,108 @@
                     </nav>
                 </div>
                 <div class="col-md-3">
-                    <form class="search">
-                        <input type="text" placeholder="search" class="input-search">
-                        <button type="submit" class="button">
-                        </button>
-                    </form>
-                    <div class="cart">
-                        <a href="" class="shop-icon">
-                            <img src="images/basket.png" alt="bascket.png">
-                        </a>
-                        <div class="number">4</div>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <form class="search">
+                                <input type="text" placeholder="search" class="input-search">
+                                <button type="submit" class="button">
+                                </button>
+                            </form>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="cart">
+                                <a href="" class="shop-icon">
+                                    <img src="images/basket.png" alt="bascket.png">
+                                </a>
+                                <div class="number">4</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
+    <main class="main">
+        <div class="container">
+            <div class="slider"></div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="plug"></div>
+                </div>
+                <div class="col-md-9">
+                    <div class="navigation">
+                        <div class="nav-site">
+                            <a href="">Home page</а> > <a href="">Products</а> > <a href="">Laptops and Tablets</a>
+                        </div>
+                    </div>
+                    <div class="row margin">
+                        <div class="col-md-8">
+                            <div class="title">Laptops and Tablets</div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="sorter"><a href="">sort by price <i class="fa fa-angle-down"
+                                        aria-hidden="true"></i></a>
+                                <ul class="hidden-sorter">
+                                    <li><a href="">sort by name</a></li>
+                                    <li><a href="">sort by date</a></li>
+                                    <li><a href="">sort by popularity</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="img-monitor">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#1 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                    <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                    <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
+                                    <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                    <div class="product-price bold">$599 <sup>25</sup></div>
+                                    <button class="button-detail">MORE DETAILS</button>
+                                    <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
+                            </div>
+                        </div>
+                        <div class="col-md-4"><div class="img-monitor">
+                            <button class="button-size"></button>
+                            <button class="button-favorite"></button>
+                        </div>
+                        <div class="product-description">
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$599 <sup>25</sup></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
+                        </div></div>
+                        <div class="col-md-4"><div class="img-monitor">
+                            <button class="button-size"></button>
+                            <button class="button-favorite"></button>
+                        </div>
+                        <div class="product-description">
+                            <div class="product-name">#1 Device Name</div>
+                            <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$599 <sup>25</sup></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
+                        </div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer class="footer">Footer</footer>
 </body>
 
