added more cards

--- a/index.html
+++ b/index.html
@@ -98,7 +98,24 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="img-monitor">
+                            <div class="img-tv">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#2 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$599 <span class="up-align">25</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-laptop">
                                 <button class="button-size"></button>
                                 <button class="button-favorite"></button>
                             </div>
@@ -106,44 +123,139 @@
                                 <div class="product-name">#1 Device Name</div>
                                 <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
                                     adipisicing elit.</div>
-                                    <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
-                                    <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
-                                    <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
-                                    <div class="product-price bold">$599 <sup>25</sup></div>
-                                    <button class="button-detail">MORE DETAILS</button>
-                                    <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$599 <span class="up-align">25</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-tablet">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#1 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$599 <span class="up-align">25</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
                             </div>
                         </div>
-                        <div class="col-md-4"><div class="img-monitor">
-                            <button class="button-size"></button>
-                            <button class="button-favorite"></button>
-                        </div>
-                        <div class="product-description">
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit.</div>
+                        <div class="col-md-4">
+                            <div class="img-tv">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#2 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
                                 <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
-                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
                                 <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
-                                <div class="product-price bold">$599 <sup>25</sup></div>
+                                <div class="product-price bold">$1250 <span class="up-align">99</span></div>
                                 <button class="button-detail">MORE DETAILS</button>
-                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
-                        </div></div>
-                        <div class="col-md-4"><div class="img-monitor">
-                            <button class="button-size"></button>
-                            <button class="button-favorite"></button>
-                        </div>
-                        <div class="product-description">
-                            <div class="product-name">#1 Device Name</div>
-                            <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit.</div>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-ipod">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#2 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
                                 <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
-                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
                                 <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
-                                <div class="product-price bold">$599 <sup>25</sup></div>
+                                <div class="product-price bold">$1250 <span class="up-align">99</span></div>
                                 <button class="button-detail">MORE DETAILS</button>
-                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png" alt=""></button>
-                        </div></div>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-tv">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#2 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$1250 <span class="up-align">99</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="img-watches">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#3 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$399 <span class="up-align">50</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-iphone">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#3 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$399 <span class="up-align">50</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                            <div class="img-watches">
+                                <button class="button-size"></button>
+                                <button class="button-favorite"></button>
+                            </div>
+                            <div class="product-description">
+                                <div class="product-name">#3 Device Name</div>
+                                <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
+                                    adipisicing elit.</div>
+                                <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
+                                <div class="product-description-text"><span class="bold">SCREEN SIZE</span> 7 inches
+                                </div>
+                                <div class="product-description-text"><span class="bold">RAM:</span> 1GB</div>
+                                <div class="product-price bold">$399 <span class="up-align">50</span></div>
+                                <button class="button-detail">MORE DETAILS</button>
+                                <button class="button-detail">ADD TO CART <img src="images/basket-white.png"
+                                        alt=""></button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
