--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="img-tv">
+                            <div class="img-monitor">
                                 <button class="button-size"></button>
                                 <button class="button-favorite"></button>
                             </div>
                             <div class="product-description">
-                                <div class="product-name">#2 Device Name</div>
+                                <div class="product-name">#1 Device Name</div>
                                 <div class="product-description-text">Lorem, ipsum dolor sit amet consectetur
                                     adipisicing elit.</div>
                                 <div class="product-description-text"><span class="bold">TYPE:</span> Laptop</div>
