added checkboxes and footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,40 @@
             <div class="slider"></div>
             <div class="row">
                 <div class="col-md-3">
-                    <div class="plug"></div>
+                    <div class="checkbox-side">
+                        <div class="caption-device">DEVICE TYPE
+                            <input type="checkbox" id="laptop">
+                            <label for="laptop" id="text"></label>
+                            <input type="checkbox" id="tablet">
+                            <label for="tablet" id="text"></label>
+                        </div>
+                        <div class="caption-color">COLOR
+                            <input type="checkbox" id="black">
+                            <label for="black" id="text"></label>
+                            <input type="checkbox" id="red">
+                            <label for="red" id="text"></label>
+                            <input type="checkbox" id="green">
+                            <label for="green" id="text"></label>
+                            <input type="checkbox" id="blue">
+                            <label for="blue" id="text"></label>
+                            <input type="checkbox" id="orange">
+                            <label for="orange" id="text"></label>
+                        </div>
+                        <div class="caption-ram">RAM
+                            <input type="checkbox" id="1gb">
+                            <label for="1gb" id="text"></label>
+                            <input type="checkbox" id="2gb">
+                            <label for="2gb" id="text"></label>
+                            <input type="checkbox" id="4gb">
+                            <label for="4gb" id="text"></label>
+                            <input type="checkbox" id="6gb">
+                            <label for="6gb" id="text"></label>
+                            <input type="checkbox" id="8gb">
+                            <label for="8gb" id="text"></label>
+                        </div>
+                        <div class="show-more"><a href="">Show more options ...</a></div>
+                        <button class="button-submit">SUBMIT</button>
+                    </div>
                 </div>
                 <div class="col-md-9">
                     <div class="navigation">
@@ -257,11 +290,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="load-more"><a href="">Load more...</a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">© Copyright 2017</footer>
 </body>
 
 </html>
