--- a/index.html
+++ b/index.html
@@ -76,33 +76,33 @@
                     <div class="checkbox-side">
                         <div class="caption-device">DEVICE TYPE
                             <input type="checkbox" id="laptop">
-                            <label for="laptop" id="text"></label>
+                            <label for="laptop" id="text"><span class="checkbox-text">Laptop</span></label>
                             <input type="checkbox" id="tablet">
-                            <label for="tablet" id="text"></label>
+                            <label for="tablet" id="text"><span class="checkbox-text">Tablet</span></label>
                         </div>
                         <div class="caption-color">COLOR
                             <input type="checkbox" id="black">
-                            <label for="black" id="text"></label>
+                            <label for="black" id="text"><span class="checkbox-text">Black</span></label>
                             <input type="checkbox" id="red">
-                            <label for="red" id="text"></label>
+                            <label for="red" id="text"><span class="checkbox-text">Red</span></label>
                             <input type="checkbox" id="green">
-                            <label for="green" id="text"></label>
+                            <label for="green" id="text"><span class="checkbox-text">Green</span></label>
                             <input type="checkbox" id="blue">
-                            <label for="blue" id="text"></label>
+                            <label for="blue" id="text"><span class="checkbox-text">Blue</span></label>
                             <input type="checkbox" id="orange">
-                            <label for="orange" id="text"></label>
+                            <label for="orange" id="text"><span class="checkbox-text">Orange</span></label>
                         </div>
                         <div class="caption-ram">RAM
                             <input type="checkbox" id="1gb">
-                            <label for="1gb" id="text"></label>
+                            <label for="1gb" id="text"><span class="checkbox-text">1 GB</span></label>
                             <input type="checkbox" id="2gb">
-                            <label for="2gb" id="text"></label>
+                            <label for="2gb" id="text"><span class="checkbox-text">2 GB</span></label>
                             <input type="checkbox" id="4gb">
-                            <label for="4gb" id="text"></label>
+                            <label for="4gb" id="text"><span class="checkbox-text">4 GB</span></label>
                             <input type="checkbox" id="6gb">
-                            <label for="6gb" id="text"></label>
+                            <label for="6gb" id="text"><span class="checkbox-text">6 GB</span></label>
                             <input type="checkbox" id="8gb">
-                            <label for="8gb" id="text"></label>
+                            <label for="8gb" id="text"><span class="checkbox-text">8 GB</span></label>
                         </div>
                         <div class="show-more"><a href="">Show more options ...</a></div>
                         <button class="button-submit">SUBMIT</button>
